remove last page.

--- a/TimeStrike.sty
+++ b/TimeStrike.sty
@@ -1,5 +1,5 @@
 \RequirePackage {expl3}
-\ProvidesExplPackage {TimeStrike} {2019/07/18} {0.7.1} { Template for TimeStrike 5e material }
+\ProvidesExplClass {TimeStrikebook} {2023/11/14} {0.1.0} { Template for TimeStrike }
 
 \bool_new:N \c__TimeStrike_isclass_bool
 
