--- a/main.tex
+++ b/main.tex
@@ -67,7 +67,7 @@
 \subfile{chapters/Monsters/Monsters}
 \subfile{chapters/Myth/Myth}
 \subfile{chapters/WinningtheGame/WinningtheGame}
-\subfile{chapters/Example/Example}
+%\subfile{chapters/Example/Example}
 
 
 \end{document}
